@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Make ::OnColumnChange always allow mutating values before update
  - Fix documented args for `after_column_change`
 
 2.025002  2015-03-21 00:03:43-05:00 America/Chicago
